test/parse/expr/bad-convert-int-no-sign.txt
;;; ERROR: 1
(module (func
          i32.const 
          i32.convert.i32))
(;; STDERR ;;;
parse/expr/bad-convert-int-no-sign.txt:4:11: unexpected token "i32.convert.i32"
          i32.convert.i32))
          ^^^^^^^^^^^^^^^
parse/expr/bad-convert-int-no-sign.txt:4:26: syntax error, unexpected ), expecting NAT or INT or FLOAT
          i32.convert.i32))
                         ^
;;; STDERR ;;)
